--- a/src/main/webapp/css/buttons.css
+++ b/src/main/webapp/css/buttons.css
@@ -42,10 +42,58 @@
 }
 
 .btn3:hover{
-	background-image: url("../images/son.jpg");
+	/* background-image: url("../images/son.jpg");
 	color: white;
-	font-weight: bolder;
+	font-weight: bolder; */
+	
 }
+
+button {
+  margin: 20px;
+}
+
+.cl {
+  width: 90%;
+  margin: 40px auto;
+  text-align: center;
+}
+
+.custom{
+  width: 130px;
+  height: 40px;
+  color: #fff;
+  border-radius: 5px;
+  padding: 10px 25px;
+  font-family: 'Lato', sans-serif;
+  font-weight: 500;
+  background: transparent;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  position: relative;
+  display: inline-block;
+  box-shadow:inset 2px 2px 2px 0px rgba(255,255,255,.5),
+  7px 7px 20px 0px rgba(0,0,0,.1),
+  4px 4px 5px 0px rgba(0,0,0,.1);
+  outline: none;
+}
+
+.btn3{
+  background: rgb(96,9,240);
+  background: linear-gradient(0deg, rgba(96,9,240,1) 0%, rgba(129,5,240,1) 100%);
+  border: none;
+  
+}
+.btn3:before {
+  height: 0%;
+  width: 2px;
+}
+.btn3:hover {
+  box-shadow:  4px 4px 6px 0 rgba(255,255,255,.5),
+    -4px -4px 6px 0 rgba(116, 125, 136, .5), 
+    inset -4px -4px 6px 0 rgba(255,255,255,.2),
+    inset 4px 4px 6px 0 rgba(0, 0, 0, .4);
+}
+
 	
 .btn4{
 	margin-top: 50px;
